name:                wilson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zhenengxie/wilson#readme
license:             BSD3
license-file:        LICENSE
author:              Zheneng Xie
maintainer:          zhenengxie97@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wilson
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random-fu,
                       containers,
                       mtl