name:                wilson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zhenengxie/wilson#readme
license:             BSD3
license-file:        LICENSE
author:              Zheneng Xie
maintainer:          zhenengxie97@gmail.com
copyright:           BSD3
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wilson
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random-fu,
                       random-source,
                       containers,
                       microlens-platform,
                       wilson
                       
library
  hs-source-dirs:      lib
  exposed-modules:     Draw, UST
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random-fu,
                       containers

test-suite reference
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random-fu,
                       containers,
                       QuickCheck,
                       hspec,
                       wilson